--- a/padics.html
+++ b/padics.html
@@ -401,8 +401,11 @@ results for the metric. For instance, with <span class="math inline">\(p=7\)</sp
 <p>whereas</p>
 <p><span class="math display">\[\left|  3-2\right|_{7}=
 \left|  1\right|_{7}= \left| 7^0  \right|_{7} = 7^{0}=1\]</span></p>
-<p>This determines other seemingly puzzling results, such as the fact
-that in the <span class="math inline">\(2\)</span>-adic sense</p>
+<p>Or in 3-adic distance:</p>
+<p><span class="math inline">\(1\)</span> and <span class="math inline">\(3\)</span>: Their difference <span class="math inline">\((2)\)</span> is not divisible by <span class="math inline">\(3\)</span>, so their <span class="math inline">\(3\)</span>-adic distance is relatively large.
+<span class="math inline">\(1\)</span> and <span class="math inline">\(10\)</span>: Their difference <span class="math inline">\((9)\)</span> is divisible by <span class="math inline">\(3^2\)</span>, making them closer in the <span class="math inline">\(3\)</span>-adic sense.</p>
+<p>This metric determines other seemingly puzzling results, such as the
+fact that in the <span class="math inline">\(2\)</span>-adic sense</p>
 <p><span class="math display">\[1 + 2 + 2^2 + 2^3 + 2^4 +
 \cdots=\frac{1}{1-2}=-1\]</span></p>
 <p>makes sense, based on the fact that the added values (in <span class="math inline">\(2\)</span>-adic) are getting smaller and smaller.
