--- a/padics.html
+++ b/padics.html
@@ -530,16 +530,24 @@ a_4\,p\dots \right)\]</span></p>
 \require{enclose}
 \begin{array}{rll}
      &amp;
-\color{blue}{2}\,\color{red}{3}\,\color{magenta}{1}\,\color{green}{3}\dots  \\[-3pt]
-   3 &amp;\enclose{longdiv}{\phantom{0}1}\kern-.2ex \\[-3pt]
-      &amp; \underline{-6} &amp;&amp; \hbox{($\color{blue}{2} \times 3 =
-6\equiv 1\mod(5)$)}\quad\hbox{($1=3(\color{blue}2p^0 +x_1 p^1 + x_2p^2+
-x_3p^3+\cdots)$)} \\[-3pt]
-      &amp;-5\phantom{0}\to -1 &amp;&amp; \hbox{($-5/p = -1\equiv
-4\mod(5)$)}\quad\hbox{($-5/p=3(x_1 + x_2p^1+ x_3p^2+\cdots)$)} \\[-3pt]
-      &amp;\phantom{0000000}\underline{-9\phantom{0}} &amp;&amp;
-\hbox{($\color{red}{3} \times 3 =9 \equiv 4 \mod(5)$)}
-\quad\hbox{($-1=3(\color{red}3p^0 + x_2p^1+ x_3p^2+\cdots)$)}\\[-3pt]
+\color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{green}{3}\dots  \\[-3pt]
+   3 &amp;\enclose{longdiv}{\phantom{0}\color{brown}{\bf 1}}\kern-.2ex
+\\[-3pt]
+      &amp; \underline{-\color{orange}{\bf 6}} &amp;&amp;
+\hbox{($\color{blue}{2} \times 3 =\color{orange} 6\equiv
+\color{brown}\bf 1\mod(5)$)}\quad\hbox{($\color{brown}{\bf
+1}=3\,(\color{blue}2\,p^0 +x_1 \,p^1 + x_2 \,p^2+ x_3 \,p^3+\cdots)$)}
+\\[3pt]
+      &amp;\color{red}{\bf{-5}}\phantom{0}\to \color{brown}{\bf{-1}}
+&amp;&amp; \hbox{($\frac{\color{red}{\bf{-5}}}{p} =
+\color{brown}{-1}\equiv
+4\mod(5)$)}\quad\hbox{($\frac{\color{red}{\bf{-5}}}{p}=3\,(x_1 +
+x_2\,p^1+ x_3\,p^2+\cdots)$)} \\[3pt]
+      &amp;\phantom{0000000}\underline{-\color{orange}{\bf
+9}\phantom{0}} &amp;&amp; \hbox{($\color{aqua}{3} \times 3
+=\color{orange}{\bf 9} \equiv 4 \mod(5)$)}
+\quad\hbox{($\color{brown}{\bf{-1}}=3\,(\color{aqua}3\,p^0 + x_2\,p^1+
+x_3\,p^2+\cdots)$)}\\[3pt]
       &amp;\phantom{00000}-10 &amp;\to -2 &amp; \hbox{($-10/p = -2\equiv
 3\mod(5)$)}\quad\hbox{($-10/p=3(x_2+ x_3p+\cdots)$)} \\[-3pt]
       &amp;&amp;\phantom{000}\underline{-3} &amp;
