--- a/padics.html
+++ b/padics.html
@@ -535,33 +535,37 @@ a_4\,p\dots \right)\]</span></p>
 \\[-3pt]
       &amp; \underline{-\color{orange}{\bf 6}} &amp;&amp;
 \hbox{($\color{blue}{2} \times 3 =\color{orange}{\bf{6}}\equiv
-\color{brown}{\bf{ 1}}\mod(5)$)}\quad\hbox{($\color{brown}{\bf
-1}=3\,(\color{blue}2\,p^0 +x_1 \,p^1 + x_2 \,p^2+ x_3 \,p^3+\cdots)$)}
+\color{brown}{\bf{ 1}}\mod(5)$)}\quad\hbox{$\color{brown}{\bf
+1}=3\,(\color{blue}2\,p^0 +x_1 \,p^1 + x_2 \,p^2+ x_3 \,p^3+\cdots)$}
 \\[3pt]
       &amp;\color{red}{\bf{-5}}\phantom{0}\to \color{brown}{\bf{-1}}
 &amp;&amp; \hbox{($\frac{\color{red}{\bf{-5}}}{p} =
-\color{brown}{-1}\equiv
-4\mod(5)$)}\quad\hbox{($\frac{\color{red}{\bf{-5}}}{p}=3\,(x_1 +
-x_2\,p^1+ x_3\,p^2+\cdots)$)} \\[3pt]
+\color{brown}{\bf{-1}}\equiv
+4\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-5}}}{p}=3\,(x_1 +
+x_2\,p^1+ x_3\,p^2+\cdots)$} \\[3pt]
       &amp;\phantom{0000000}\underline{-\color{orange}{\bf
 9}\phantom{0}} &amp;&amp; \hbox{($\color{aqua}{3} \times 3
 =\color{orange}{\bf 9} \equiv 4 \mod(5)$)}
-\quad\hbox{($\color{brown}{\bf{-1}}=3\,(\color{aqua}3\,p^0 + x_2\,p^1+
-x_3\,p^2+\cdots)$)}\\[3pt]
+\quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{aqua}3\,p^0 + x_2\,p^1+
+x_3\,p^2+\cdots)$}\\[3pt]
       &amp;\phantom{00000}\color{red}{\bf{-10}} &amp;\to
 \color{brown}{\bf{-2}} &amp; \hbox{($\frac{\color{red}{\bf{-10}}}{p} =
 \color{brown}{\bf{-2}}\equiv
-3\mod(5)$)}\quad\hbox{($\frac{\color{red}{\bf{-10}}}{p}=3\,(x_2+
-x_3\,p+\cdots)$)} \\[3pt]
+3\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-10}}}{p}=3\,(x_2+
+x_3\,p+\cdots)$} \\[3pt]
       &amp;&amp;\phantom{000}\underline{-\color{orange}{\bf{3}}} &amp;
-\hbox{($\color{magenta}{1} \times 3 = 3\equiv
-3\mod(5)$)}\quad\hbox{($-2=3(\color{magenta}1p^0 + x_3p^1+\cdots)$)}
-\\[-3pt]
-       &amp;&amp;\phantom{00}-5 \to -1 &amp; \hbox{($-5/p = -1\equiv
-4\mod(5)$)}\quad\hbox{($-5/p=3(x_3+\cdots)$)} \\[-3pt]
-       &amp;&amp;\phantom{00000000}-9 &amp; \hbox{($\color{green}{3}
-\times 3 = 9\equiv 4\mod(5)$)}\quad\hbox{($-1=3(\color{green}3p^0
-+\cdots)$)}\\[-3pt]
+\hbox{($\color{magenta}{1} \times 3 = \color{orange}{\bf{3}}\equiv
+3\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-2}}=3\,(\color{magenta}1\,p^0
++ x_3\,p^1+\cdots)$} \\[3pt]
+       &amp;&amp;\phantom{00}\color{red}{\bf{-5}} \to
+\color{brown}{\bf{-1}} &amp; \hbox{($\frac{\color{red}{\bf{-5}}}{p} =
+\color{brown}{\bf{-1}}\equiv
+4\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-5}}}{p}=3\,(x_3+\cdots)$}
+\\[3pt]
+       &amp;&amp;\phantom{00000000}-\color{orange}{\bf{9}} &amp;
+\hbox{($\color{green}{3} \times 3 = \color{orange}{\bf{9}}\equiv
+4\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{green}3\,p^0
++\cdots)$}\\[-3pt]
        &amp;&amp;&amp;\vdots
   \end{array}
 \]</span></p>
