--- a/padics.html
+++ b/padics.html
@@ -530,7 +530,7 @@ a_4\,p\dots \right)\]</span></p>
 \require{enclose}
 \begin{array}{rll}
      &amp;
-\color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{green}{3}\dots  \\[-3pt]
+\color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{lime}{3}\dots  \\[-3pt]
    3 &amp;\enclose{longdiv}{\phantom{0}\color{brown}{\bf 1}}\kern-.2ex
 \\[-3pt]
       &amp; \underline{-\color{orange}{\bf 6}} &amp;&amp;
@@ -562,11 +562,12 @@ x_3\,p+\cdots)$} \\[3pt]
 \color{brown}{\bf{-1}}\equiv
 4\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-5}}}{p}=3\,(x_3+\cdots)$}
 \\[3pt]
-       &amp;&amp;\phantom{00000000}-\color{orange}{\bf{9}} &amp;
-\hbox{($\color{green}{3} \times 3 = \color{orange}{\bf{9}}\equiv
-4\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{green}3\,p^0
-+\cdots)$}\\[-3pt]
-       &amp;&amp;&amp;\vdots
+       &amp;&amp;\phantom{00000000}\underline{-\color{orange}{\bf{9}}}
+&amp; \hbox{($\color{lime}{3} \times 3 = \color{orange}{\bf{9}}\equiv
+4\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{lime}3\,p^0
++\cdots)$}\\[2pt]
+       &amp;&amp;\phantom{0000000}\color{red}{\bf{-10}}\\[2pt]
+       &amp;&amp;\phantom{000000000}\vdots
   \end{array}
 \]</span></p>
 <p>In SageMath:</p>
@@ -632,7 +633,7 @@ example</a> of <span class="math inline">\(1/5\)</span> in <span class="math inl
 \require{enclose}
 \begin{array}{rll}
      &amp;
-\color{blue}{2}\,\color{red}{0}\,\color{magenta}{1}\,\color{green}{2}\dots  \\[-3pt]
+\color{blue}{2}\,\color{red}{0}\,\color{magenta}{1}\,\color{lime}{2}\dots  \\[-3pt]
    5 &amp;\enclose{longdiv}{\phantom{0}1}\kern-.2ex \\[-3pt]
       &amp; \underline{-10} &amp;&amp; \hbox{($\color{blue}{2} \times 5
 = 10\equiv 1\mod(3)$)} \\[-3pt]
@@ -646,7 +647,7 @@ example</a> of <span class="math inline">\(1/5\)</span> in <span class="math inl
 \hbox{($\color{magenta}{1} \times 5 = 5\equiv 2\mod(3)$)} \\[-3pt]
        &amp;&amp;\phantom{00}-6 \to -2 &amp; \hbox{($-6/p = -2\equiv
 1\mod(3)$)}\,\hbox{($-6/p=5(x_3+\cdots)$)} \\[-3pt]
-       &amp;&amp;\phantom{00000000}-10 &amp; \hbox{($\color{green}{2}
+       &amp;&amp;\phantom{00000000}-10 &amp; \hbox{($\color{lime}{2}
 \times 5 = 10\equiv 1\mod(3)$)}\\[-3pt]
        &amp;&amp;&amp;\vdots
   \end{array}
