--- a/padics.html
+++ b/padics.html
@@ -530,10 +530,10 @@ a_4\,p\dots \right)\]</span></p>
 \require{enclose}
 \begin{array}{rll}
      &amp;
-\color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{lime}{3}\dots  \\[-3pt]
+\color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{lime}{3}\dots  \\[3pt]
    3 &amp;\enclose{longdiv}{\phantom{0}\color{brown}{\bf 1\equiv
-1}}\kern-.2ex \\[-3pt]
-      &amp; \underline{-\color{orange}{\bf 6\equiv 1}} &amp;&amp;
+1}}\kern-.2ex \\[3pt]
+      &amp; \underline{-\,\color{orange}{\bf 6\equiv 1}} &amp;&amp;
 \hbox{($\color{blue}{2} \times 3 =\color{orange}{\bf{6}}\equiv
 \color{brown}{\bf{ 1}}\mod(5)$)}\quad\hbox{$\color{brown}{\bf
 1}=3\,(\color{blue}2\,p^0 +x_1 \,p^1 + x_2 \,p^2+ x_3 \,p^3+\cdots)$}
@@ -543,31 +543,32 @@ a_4\,p\dots \right)\]</span></p>
 \color{brown}{\bf{-1}}\equiv
 4\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-5}}}{p}=3\,(x_1 +
 x_2\,p^1+ x_3\,p^2+\cdots)$} \\[3pt]
-      &amp;\phantom{0000000}\underline{-\color{orange}{\bf 9\equiv
+      &amp;\phantom{0000000}\underline{-\,\color{orange}{\bf 9\equiv
 4}\phantom{0}} &amp;&amp; \hbox{($\color{aqua}{3} \times 3
 =\color{orange}{\bf 9} \equiv 4 \mod(5)$)}
 \quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{aqua}3\,p^0 + x_2\,p^1+
 x_3\,p^2+\cdots)$}\\[3pt]
-      &amp;\phantom{000000}\color{red}{\bf{-10}} &amp;\to
-\color{brown}{\bf{-2\equiv 3}} &amp;
+      &amp;\phantom{000000}\color{red}{\bf{-10}} \phantom{0}\to
+\color{brown}{\bf{-2\equiv 3}} &amp;&amp;
 \hbox{($\frac{\color{red}{\bf{-10}}}{p} = \color{brown}{\bf{-2}}\equiv
 3\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-10}}}{p}=3\,(x_2+
 x_3\,p+\cdots)$} \\[3pt]
-      &amp;&amp;\phantom{000}\underline{-\color{orange}{\bf{3\equiv 3}}}
-&amp; \hbox{($\color{magenta}{1} \times 3 = \color{orange}{\bf{3}}\equiv
+      &amp;\phantom{00000000000000}\underline{-\,\color{orange}{\bf{3\equiv
+3}}} &amp;&amp; \hbox{($\color{magenta}{1} \times 3 =
+\color{orange}{\bf{3}}\equiv
 3\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-2}}=3\,(\color{magenta}1\,p^0
 + x_3\,p^1+\cdots)$} \\[3pt]
-       &amp;&amp;\phantom{00}\color{red}{\bf{-5}} \to
-\color{brown}{\bf{-1\equiv 4}} &amp;
+       &amp;\phantom{00000000000000}\color{red}{\bf{-5}} \to
+\color{brown}{\bf{-1\equiv 4}} &amp;&amp;
 \hbox{($\frac{\color{red}{\bf{-5}}}{p} = \color{brown}{\bf{-1}}\equiv
 4\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-5}}}{p}=3\,(x_3+\cdots)$}
 \\[3pt]
-       &amp;&amp;\phantom{00000000}\underline{-\color{orange}{\bf{9\equiv
-4}}} &amp; \hbox{($\color{lime}{3} \times 3 =
+       &amp;\phantom{00000000000000000000}\underline{-\,\color{orange}{\bf{9\equiv
+4}}} &amp;&amp; \hbox{($\color{lime}{3} \times 3 =
 \color{orange}{\bf{9}}\equiv
 4\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{lime}3\,p^0
 +\cdots)$}\\[2pt]
-       &amp;&amp;\phantom{0000000}\color{red}{\bf{-10}}\\[2pt]
+       &amp;\phantom{00000000000000000000}\color{red}{\bf{-10}}\\[2pt]
        &amp;&amp;\phantom{000000000}\vdots
   \end{array}
 \]</span></p>
