--- a/padics.html
+++ b/padics.html
@@ -588,6 +588,15 @@ x_3\,p+\cdots)$} \\[3pt]
        &amp;&amp;\phantom{000000000}\vdots
   \end{array}
 \]</span></p>
+<p><span class="math display">\[\left(1/3 \right)_{\mathbb Q_5}= 2 + 3
+\cdot 5 + 1 \cdot 5^2 + 3 \cdot 5^3 + \cdots\]</span> Notice that the
+algorithm keeps reducing the remainder modulo <span class="math inline">\(5\)</span>, as we get the coefficients for higher
+and higher <span class="math inline">\(p^n\)</span> values. This is akin
+to adding a <span class="math inline">\(0\)</span> to the remainder to
+keep dividing <span class="math inline">\(1\)</span> into <span class="math inline">\(3\)</span> in the process of getting the decimal
+expression of <span class="math inline">\(1/3,\)</span> with each <span class="math inline">\(0\)</span> added to the remainder equivalently
+contributing to higher and higher <span class="math inline">\(10^{-n}\)</span> values in the decimal
+expression.</p>
 <p>In SageMath:</p>
 <pre><code>padic_printing.mode(&#39;digits&#39;)
 print(Qp(5)(1/3))
