--- a/mobius_transformation.html
+++ b/mobius_transformation.html
@@ -396,8 +396,21 @@ computer platform the real and imaginary components will need to be
 separated.</p>
 <p>Using <a href="https://math.stackexchange.com/q/1583277/152225">this
 post</a>:</p>
+<p>If</p>
+<ul>
+<li><span class="math inline">\(Z\)</span> is a point <span class="math inline">\((x, y)\)</span>, equivalent to the complex number
+<span class="math inline">\(x+ yi\)</span></li>
+<li><span class="math inline">\(A = a_r + a_i i\)</span></li>
+<li><span class="math inline">\(B = b_r + b_i i\)</span></li>
+<li><span class="math inline">\(C = c_r + c_i i\)</span></li>
+<li><span class="math inline">\(D = d_r + d_i i\)</span></li>
+</ul>
+<p>(so <span class="math inline">\(Z, A, B, C, D\)</span> are complex
+numbers, while <span class="math inline">\(x, y, a_r, a_i, b_r, b_i,
+c_r,  c_i, d_r, d_i\)</span> are real numbers)</p>
 <p><span class="math display">\[\begin{align}
-&amp;\frac {(a_r x - a_i y ) + (a_i x + a_r y) i + b_r + b_i i}
+f(Z)  &amp;=   \frac{AZ+B}{CZ+D}\\[3ex]
+=&amp;\frac {(a_r x - a_i y ) + (a_i x + a_r y) i + b_r + b_i i}
 {(c_r x - c_i y) + (c_i x + c_r y) i + d_r + d_i i} \\[3ex]
 =
 &amp;\frac {(a_r x - a_i y ) + (a_i x + a_r y) i + b_r + b_i i}
